--- a/frontend/backend/package.json
+++ b/frontend/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "techathon",
   "version": "1.0.0",
   "description": "backend gep_techathon",
   "main": "server.js",
@@ -10,5 +10,10 @@
     "backend"
   ],
   "author": "geckers",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
+  }
 }
