--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "nodemailer": "^6.6.2",
     "popper": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
